<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scrapbookapp.MainActivity"
    tools:ignore="HardcodedText" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignTop="@+id/imageView4"
        android:contentDescription="@string/chichen1"
        android:src="@drawable/chichen_itza" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="41dp"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/kilomanjaro1"
        android:src="@drawable/kilimanjaro" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/algeria1"
        android:src="@drawable/algeriamonument"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_toLeftOf="@+id/imageView3"
        android:text="@string/algeria" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="15dp"
        android:text="@string/valley" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/imageView3"
        android:text="@string/kilomanjaro" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/chichen" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/imageView3"
        android:contentDescription="@string/valley1"
        android:src="@drawable/valleyofkings" />

</RelativeLayout>